Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124182

[gstreamer] tst_QCameraBackend::testNativeMetadata test failure

    XMLWordPrintable

Details

    • Linux/X11
    • e2893da47 (dev), 2115f89d7 (6.7), 481c8c29e (tqtc/lts-6.5)
    • Multimedia wk 15-16, Multimedia wk 17-18, Multimedia wk 19-20

    Description

      `tst_QCameraBackend::testNativeMetadata` tests fails in rare cases: if it fails we get:

      ➜  build-qt6-dev-clang_17_qt_dev-Debug QT_MEDIA_BACKEND=gstreamer qtmultimedia/tests/auto/integration/qcamerabackend/tst_qcamerabackend testNativeMetadata -repeat 100
      ********* Start testing of tst_QCameraBackend *********
      Config: Using QtTest library 6.8.0, Qt 6.8.0 (x86_64-little_endian-lp64 shared (dynamic) debug build; by Ubuntu Clang 17.0.6 (++20231209124227+6009708b4367-1~exp1~20231209124336.77)), ubuntu 22.04
      PASS   : tst_QCameraBackend::initTestCase()
      PASS   : tst_QCameraBackend::testNativeMetadata()
      PASS   : tst_QCameraBackend::cleanupTestCase()
      PASS   : tst_QCameraBackend::initTestCase()
      PASS   : tst_QCameraBackend::testNativeMetadata()
      PASS   : tst_QCameraBackend::cleanupTestCase()
      PASS   : tst_QCameraBackend::initTestCase()
      PASS   : tst_QCameraBackend::testNativeMetadata()
      PASS   : tst_QCameraBackend::cleanupTestCase()
      PASS   : tst_QCameraBackend::initTestCase()
      FAIL!  : tst_QCameraBackend::testNativeMetadata() Compared values are not the same
         Actual   (player.metaData().value(QMediaMetaData::Title).toString()): ""
         Expected (metaData.value(QMediaMetaData::Title).toString())         : "Title"
         Loc: [/home/tim/dev/qt6-dev/qtmultimedia/tests/auto/integration/qcamerabackend/tst_qcamerabackend.cpp(708)]
      PASS   : tst_QCameraBackend::cleanupTestCase()
      Totals: 11 passed, 1 failed, 0 skipped, 0 blacklisted, 4531ms
      ********* Finished testing of tst_QCameraBackend *********
      

      the metadata don't appear on the media player, while checking the file externally, the metadata appear correct. this might indicate a race condition between closing and opening the file.

      even rarer:

      PASS   : tst_QCameraBackend::cleanupTestCase()
      PASS   : tst_QCameraBackend::initTestCase()
      FAIL!  : tst_QCameraBackend::testNativeMetadata() 'durationChanged.size()' returned FALSE. ()
         Loc: [/home/tim/dev/qt6-dev/qtmultimedia/tests/auto/integration/qcamerabackend/tst_qcamerabackend.cpp(671)]
      PASS   : tst_QCameraBackend::cleanupTestCase()
      Totals: 78 passed, 1 failed, 38 skipped, 0 blacklisted, 43103ms
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            timblechmann tim blechmann
            timblechmann tim blechmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes