GStreamer: fix QGstreamerMediaPlayer - fix metadata test

QGstreamerMediaPlayer did not emit metaDataChanged after parsing
GST_MESSAGE_TAG. This caused metadata to be changed without notifying
the application.

In the unit test we need to wait for `metaDataChanged` at least twice,
since it is called from both the GST_MESSAGE_TAG handler and from
parseStreamsAndMetadata.

Fixes: QTBUG-124182
Pick-to: 6.5 6.7
Change-Id: I68f81d5bcb1a2c809f3641ec11356f5b9a8cb601
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>